--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CreativeFlow - Thiết Kế Web Freelance</title>
+    <title>CreativeFlow - Thiết Kế Web Freelance & Giải Pháp Số</title>
+    <meta name="description" content="CreativeFlow chuyên thiết kế website Neumorphism, phát triển ứng dụng web và giải pháp số sáng tạo. Biến ý tưởng của bạn thành hiện thực với công nghệ hiện đại.">
+    <meta name="keywords" content="thiết kế web, web design, neumorphism, freelance developer, react, tailwind css, 3d web, creative agency">
+    <meta name="author" content="CreativeFlow">
+    <meta property="og:title" content="CreativeFlow - Thiết Kế Web Freelance & Giải Pháp Số">
+    <meta property="og:description" content="Chuyên thiết kế website Neumorphism, phát triển ứng dụng web và giải pháp số sáng tạo.">
+    <meta property="og:image" content="https://i.postimg.cc/placeholder3.png">
+    <meta property="og:url" content="https://creativeflow.vercel.app/">
+    <meta property="og:type" content="website">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
