--- a/index.html
+++ b/index.html
@@ -1,6 +1,56 @@
 <!DOCTYPE html>
 <html lang="vi">
 
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CreativeFlow - Thiết Kế Web Freelance & Giải Pháp Số</title>
+    <meta name="description"
+        content="CreativeFlow chuyên thiết kế website Neumorphism, phát triển ứng dụng web và giải pháp số sáng tạo. Biến ý tưởng của bạn thành hiện thực với công nghệ hiện đại.">
+    <meta name="keywords"
+        content="thiết kế web, web design, neumorphism, freelance developer, react, tailwind css, 3d web, creative agency">
+    <meta name="author" content="CreativeFlow">
+    <meta property="og:title" content="CreativeFlow - Thiết Kế Web Freelance & Giải Pháp Số">
+    <meta property="og:description"
+        content="Chuyên thiết kế website Neumorphism, phát triển ứng dụng web và giải pháp số sáng tạo.">
+    <link rel="stylesheet" href="/index.css">
+    <style>
+        /* Custom Scrollbar for the right panel */
+        .hide-scrollbar::-webkit-scrollbar {
+            width: 6px;
+        }
+
+        .hide-scrollbar::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        .hide-scrollbar::-webkit-scrollbar-thumb {
+            background-color: rgba(255, 255, 255, 0.2);
+            border-radius: 20px;
+        }
+
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            background-color: #020617;
+            /* slate-950 */
+            color: white;
+        }
+
+        .glass {
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+    </style>
+</head>
+
+<body>
+    <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 
 </html>
